--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background-color: rgb(224, 222, 222);
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo{
+  height: 40px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#botonCarrito {
+  border-color: rgb(38, 204, 23);
+  color:rgb(0, 0, 0);
+  background-color: rgb(163, 226, 128);
+  padding: 12px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Productoind {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.cantidades {
+  
+  padding: 20px;
+}
+.cantidades span {
+  padding: 5px;
+  font-size: x-large;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cantidades button {
+  margin: 5px;
+  border-color: rgb(0, 0, 0);
+  color:rgb(0, 0, 0);
+  background-color: rgb(55, 136, 202);
+  padding: 12px;
+}
+
+.motosierra {
+  max-width: 100%;
+  margin: 0 auto;
+  display: block;
+}
+
+.Items {
+  display: flex;
+  
+  justify-content:space-around;
+  margin: 20px;
+}
+
+.Product > img {
+  width: 490px;
+  height: 490px;
+}
+
+.VerMas {
+  background-color: yellow;
+  display: flex;
+  padding: 10px;
+}
+
+.Product {
+  display: block;
+  border: 1px solid black;
+  width: 430px;
+  height: 430px;
+  padding: 0px;
+  text-align: center;
 }
