--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@
   border-color: rgb(0, 0, 0);
   color:rgb(0, 0, 0);
   background-color: rgb(55, 136, 202);
-  padding: 12px;
+  padding: 9px;
 }
 
 .motosierra {
@@ -58,16 +58,82 @@
 }
 
 .VerMas {
-  background-color: yellow;
-  display: flex;
+  border: 1px solid #4d4c4c;
+  background-color: rgb(250, 250, 150);
+  color:rgb(0, 0, 0);
+  text-decoration: none;
   padding: 10px;
 }
 
-.Product {
-  display: block;
-  border: 1px solid black;
-  width: 430px;
-  height: 430px;
-  padding: 0px;
+.product {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 10px;
+  width: 300px;
+  display: inline-block;
+  text-align: center;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.categoria-container {
+  margin-bottom: 20px;
+}
+
+.item-list-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.categoria-btn {
+  background-color: #7fe0ef;
+  color: #000000;
+  padding: 8px 16px;
+  display: inline-block;
+  text-align: center;
+  Margin: 20px;
+  border-radius: 4px;
+  text-decoration: none;
+}
+
+.categoria-btn:hover {
+  background-color: #3f8ded;
+}
+
+.item-container {
+  display: flex;
+  align-items: center;
+}
+
+.image-container {
+
+  flex: 0 0 auto; /* Evita que la imagen se estire */
+  margin: 100px; /* Agrega un margen a la derecha para separar la imagen del contenido */
+  border: 2px solid #4d4c4c;
+}
+
+.content-container {
+  flex: 1;
+  
+
+
+}
+
+.mensaje-container {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #00f936;
+  border: 2px solid #000000;
+  padding: 30px;
+  font-size: 24px;
+}
+
+.mensaje {
   text-align: center;
 }
