--- a/src/App.css
+++ b/src/App.css
@@ -323,3 +323,140 @@
     font-size: 18px;
   }
   
+/*FOOTER*/
+
+  .footer {
+    padding: 10px 0;
+    background-color: #eaeaea;
+    color: #000000;
+  }
+  
+  .footer .container {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  
+  .footer .footer-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .footer .footer-logo {
+    margin-right: 60px;
+  }
+  
+  .footer .footer-logo img {
+    max-width: 200px;
+    height: auto;
+  }
+  
+  .footer .footer-social-icons {
+    display: flex;
+    margin-right: 10px;
+  }
+  
+  .footer .footer-social-icons a {
+    color: #333;
+    font-size: 40px;
+    margin-right: 10px;
+  }
+  
+  .footer .footer-text {
+    font-size: 14px;
+    text-align: center;
+  }
+
+  /*CONTACTOS*/
+  .contacto-container {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .contacto-form {
+    width: 400px;
+    background-color: #f5f5f5;
+    padding: 20px;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  
+  .contacto-form h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  .contacto-form input,
+  .contacto-form textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .contacto-form button[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .contacto-form button[type="submit"]:hover {
+    background-color: #45a049;
+  }
+
+  .Contactos{
+  display: flex;
+  background: linear-gradient(to bottom, #e0dfdf, #b3a29b);
+}
+
+.contacto-redes{
+width: 50%;
+padding: 40px;
+display: flex;
+flex-direction: column;
+text-decoration: none;
+font-size: 24px;
+}
+
+.contacto-redes img {
+  max-width: 100px;
+  margin: 30px;
+  height: auto;
+}
+
+.fondo{
+  background: linear-gradient(to bottom, #ffffff, #f5f5f5);
+}
+
+.mapa{
+  padding: 80px;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  background-color: #c5dbf3;
+}
+.direccion-container {
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.direccion-container h2 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.direccion-container p {
+  margin: 5px 0;
+}
+
+.imagen-grande img {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
